Add image files and alt texts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <ul>
         <li><a href="./recipies/chicken-alfredo.html">Chicken Alfredo</a></li>
+        <li><a href="./recipies/smores.html">S'Mores</a></li>
+        <li><a href="./recipies/sourdough.html">Sourdough</a></li>
     </ul>
 
 </body>
