--- a/recipies/chicken-alfredo.html
+++ b/recipies/chicken-alfredo.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Chicken Alfredo</h1>
+    <img src="../images/chicken-alfredo-img.jpeg" alt="A heaping plate of chicken alfredo.">
 </body>
 </html>
