--- a/recipies/sourdough.html
+++ b/recipies/sourdough.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Sourdough</h1>
+    <img src="../images/sourdough-img.jpeg" alt="A toasty loaf of sourdough bread.">
 </body>
 </html>
