Add recipie content

--- a/recipies/chicken-alfredo.html
+++ b/recipies/chicken-alfredo.html
@@ -9,5 +9,31 @@
 <body>
     <h1>Chicken Alfredo</h1>
     <img src="../images/chicken-alfredo-img.jpeg" alt="A heaping plate of chicken alfredo.">
+
+    <h2>Description</h2>
+    <p>This recipie is an italian-american classic and one of my favorites. It's one
+        of the first things I learned to make myself and today, I'll be going over the
+        basics on how to make your alfredo shine!
+    </p>
+    
+    <br>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Heavy Cream</li>
+        <li>Butter</li>
+        <li>Parmesian Cheese</li>
+        <li>Pasta</li>
+        <li>Chicken Breasts</li>
+        <li>Spices</li>
+    </ul>
+
+    <h3>Recipie</h3>
+    <ol>
+        <li>Season and grill the chicken breasts, then slice thinly</li>
+        <li>Cook pasta according to package instructions and then strain</li>
+        <li>Melt the butter in a saucepan, then add the heavy cream and parmesian</li>
+        <li>Combine all items into the saucepan and enjoy!</li>
+
+    </ol>
 </body>
 </html>
