--- a/recipies/sourdough.html
+++ b/recipies/sourdough.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Sourdough</title>
 </head>
 <body>
-    <h1>Sourdough</h1>
+    <h1 class="PageTitle">Sourdough</h1>
     <img src="../images/sourdough-img.jpeg" alt="A toasty loaf of sourdough bread.">
 
     <h2>Description</h2>
