--- a/recipies/smores.html
+++ b/recipies/smores.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>S'Mores</title>
 </head>
 <body>
-    <h1>S'Mores</h1>
+    <h1 class="PageTitle">S'Mores</h1>
     <img src="../images/smores-img.jpeg" alt="A plate of yummy smores!">
 
     <h2>Description</h2>
