Change Color Scheme and Add Margins

--- a/recipies/smores.html
+++ b/recipies/smores.html
@@ -11,27 +11,29 @@
     <h1 class="PageTitle">S'Mores</h1>
     <img src="../images/smores-img.jpeg" alt="A plate of yummy smores!">
 
-    <h2>Description</h2>
-    <p>Who doesn't love the taste of a fresh s'more, fresh off the campfire?
-        You can make s'mores of your own with just three simple ingredients!
-    </p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Graham Crackers</li>
-        <li>Chocolate Bar</li>
-        <li>Marshmallows</li>
-    </ul>
-
-    <h3>Recipie</h3>
-    <ol>
-        <li>Assemble two graham crackers, both with a few squares of chocolate
-            on top
-        </li>
-        <li>Toast a marshmallow or two over an open flame, until golden</li>
-        <li>Spread the gooey marshmallows over one of the graham cracker
-            stacks and smush the other stack on top to complete your treat!
-        </li>
-    </ol>
+    <div class="Content">
+        <h2>Description</h2>
+        <p>Who doesn't love the taste of a fresh s'more, fresh off the campfire?
+            You can make s'mores of your own with just three simple ingredients!
+        </p>
+    
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Graham Crackers</li>
+            <li>Chocolate Bar</li>
+            <li>Marshmallows</li>
+        </ul>
+    
+        <h3>Recipie</h3>
+        <ol>
+            <li>Assemble two graham crackers, both with a few squares of chocolate
+                on top
+            </li>
+            <li>Toast a marshmallow or two over an open flame, until golden</li>
+            <li>Spread the gooey marshmallows over one of the graham cracker
+                stacks and smush the other stack on top to complete your treat!
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
