--- a/recipies/sourdough.html
+++ b/recipies/sourdough.html
@@ -11,24 +11,26 @@
     <h1 class="PageTitle">Sourdough</h1>
     <img src="../images/sourdough-img.jpeg" alt="A toasty loaf of sourdough bread.">
 
-    <h2>Description</h2>
-    <p>Sourdough bread is a staple of any cottage-core home and it's actually
-        quite simple to make. Anyone can do it!
-    </p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Sourdough Starter</li>
-        <li>Bread Flour</li>
-        <li>Water</li>
-        <li>Salt</li>
-    </ul>
-
-    <h3>Recipie</h3>
-    <ol>
-        <li>Mix the starter with the water, salt, and flour</li>
-        <li>Allow to rise for several hours, kneading occasionally</li>
-        <li>Bake the bread at 450 for an hour</li>
-    </ol>
+    <div class="Content">
+        <h2>Description</h2>
+        <p>Sourdough bread is a staple of any cottage-core home and it's actually
+            quite simple to make. Anyone can do it!
+        </p>
+    
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Sourdough Starter</li>
+            <li>Bread Flour</li>
+            <li>Water</li>
+            <li>Salt</li>
+        </ul>
+    
+        <h3>Recipie</h3>
+        <ol>
+            <li>Mix the starter with the water, salt, and flour</li>
+            <li>Allow to rise for several hours, kneading occasionally</li>
+            <li>Bake the bread at 450 for an hour</li>
+        </ol>
+    </div>
 </body>
 </html>
