--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
     <h1 class="PageTitle">Odin Recipies</h1>
 
-    <ul>
-        <li><a href="./recipies/chicken-alfredo.html">Chicken Alfredo</a></li>
-        <li><a href="./recipies/smores.html">S'Mores</a></li>
-        <li><a href="./recipies/sourdough.html">Sourdough</a></li>
-    </ul>
+    <div class="RecipieLinks">
+        <h2>Popular Recipies</h2>
+        <ul>
+            <li><a href="./recipies/chicken-alfredo.html">Chicken Alfredo</a></li>
+            <li><a href="./recipies/smores.html">S'Mores</a></li>
+            <li><a href="./recipies/sourdough.html">Sourdough</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
